kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluegreen
  labels:
    app: bluegreen-deployment
